--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "duythanh",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/huydo270298/duythanh",
+  "homepage": "https://huydo270298.github.io/duythanh",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
