--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.7",
+    "react-dropzone": "^14.2.3",
+    "react-file-drop": "^3.1.6",
     "react-hook-form": "^7.37.0",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
