--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "i18next": "^22.0.5",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +20,7 @@
     "react-dropzone": "^14.2.3",
     "react-file-drop": "^3.1.6",
     "react-hook-form": "^7.37.0",
+    "react-i18next": "^12.0.0",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
